# free-sophnet-api

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yml.example  docker-compose.yml  install_deps.bat  install_deps.ps1  openai-chat-proxy-config.example.yaml  openai_chat_proxy.py  pyproject.toml  requirements.txt  run_proxy.bat  run_proxy.ps1
src/: config.py  const.py  forward.py  main.py  soph.py  utils.py
tests/: bench.py  test_gen_useragents.py
